--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         <button class="login">Log In</button>
         <button class="started">Get Started</button>
-        <div class="content">Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed ipsa sin</div>
+        <div class="content">Redefining Realities: Matrix </div>
         <div class="golden-line-1"></div> 
         <div class="explore">
             <img  src="explore.png">
